// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Shift Roster Page should render EventWrapper correctly 1`] = `
<div
  className="rbc-event"
  style={
    Object {
      "backgroundColor": "transparent",
      "border": "none",
      "gridRowEnd": 81,
      "gridRowStart": 51,
    }
  }
>
  <span>
    Shift
  </span>
</div>
`;

exports[`Shift Roster Page should render correctly when creating a new shift via button 1`] = `
<Fragment>
  <Level
    className=""
    gutter="sm"
    style={
      Object {
        "backgroundColor": "var(--pf-global--BackgroundColor--100)",
        "height": "60px",
        "padding": "5px 5px 5px 5px",
      }
    }
  >
    <LevelItem
      style={
        Object {
          "display": "flex",
        }
      }
    >
      <WeekPicker
        aria-label="Select Week to View"
        onChange={[Function]}
        value={2018-07-01T00:00:00.000Z}
      />
      <TypeaheadSelectInput
        aria-label="Select Spot"
        defaultValue={
          Object {
            "id": 2,
            "name": "Spot",
            "requiredSkillSet": Array [
              Object {
                "id": 3,
                "name": "Skill",
                "tenantId": 0,
                "version": 0,
              },
            ],
            "tenantId": 0,
            "version": 0,
          }
        }
        emptyText="Select Spot"
        onChange={[Function]}
        optionToStringMap={[Function]}
        options={
          Array [
            Object {
              "id": 2,
              "name": "Spot",
              "requiredSkillSet": Array [
                Object {
                  "id": 3,
                  "name": "Skill",
                  "tenantId": 0,
                  "version": 0,
                },
              ],
              "tenantId": 0,
              "version": 0,
            },
          ]
        }
      />
    </LevelItem>
    <LevelItem
      style={
        Object {
          "display": "flex",
        }
      }
    >
      <Button
        aria-label="Publish"
        onClick={[MockFunction]}
        style={
          Object {
            "margin": "5px",
          }
        }
      >
        Publish
      </Button>
      <Button
        aria-label="Solve"
        onClick={[MockFunction]}
        style={
          Object {
            "margin": "5px",
          }
        }
      >
        Schedule
      </Button>
      <Button
        aria-label="Refresh"
        onClick={[Function]}
        style={
          Object {
            "margin": "5px",
          }
        }
      >
        Refresh
      </Button>
      <Button
        aria-label="Create Shift"
        onClick={[Function]}
        style={
          Object {
            "margin": "5px",
          }
        }
      >
        Create Shift
      </Button>
    </LevelItem>
  </Level>
  <div
    style={
      Object {
        "height": "calc(100% - 60px)",
      }
    }
  >
    <Connect(EditShiftModal)
      aria-label="Edit Shift"
      isOpen={true}
      onClose={[Function]}
      onDelete={[Function]}
      onSave={[Function]}
    />
    <Title
      size="md"
    >
      Spot
    </Title>
    <div
      style={
        Object {
          "height": "calc(100% - 20px)",
        }
      }
    >
      <ForwardRef
        allDayAccessor={[Function]}
        components={
          Object {
            "event": [Function],
            "eventWrapper": [Function],
          }
        }
        date={2018-07-01T00:00:00.000Z}
        dayPropGetter={[Function]}
        endAccessor={[Function]}
        eventPropGetter={[Function]}
        events={
          Array [
            Object {
              "contractMinutesViolationPenaltyList": Array [],
              "desiredTimeslotForEmployeeRewardList": Array [],
              "employee": Object {
                "contract": Object {
                  "id": 5,
                  "maximumMinutesPerDay": 10,
                  "maximumMinutesPerMonth": 500,
                  "maximumMinutesPerWeek": 70,
                  "maximumMinutesPerYear": 6000,
                  "name": "Basic Contract",
                  "tenantId": 0,
                  "version": 0,
                },
                "id": 4,
                "name": "Employee 1",
                "skillProficiencySet": Array [
                  Object {
                    "id": 6,
                    "name": "Not Required Skill",
                    "tenantId": 0,
                    "version": 0,
                  },
                ],
                "tenantId": 0,
                "version": 0,
              },
              "endDateTime": 2018-07-01T17:00:00.000Z,
              "id": 1,
              "indictmentScore": Object {
                "hardScore": 0,
                "mediumScore": 0,
                "softScore": 0,
              },
              "pinnedByUser": false,
              "requiredSkillViolationList": Array [],
              "rotationEmployee": Object {
                "contract": Object {
                  "id": 5,
                  "maximumMinutesPerDay": 10,
                  "maximumMinutesPerMonth": 500,
                  "maximumMinutesPerWeek": 70,
                  "maximumMinutesPerYear": 6000,
                  "name": "Basic Contract",
                  "tenantId": 0,
                  "version": 0,
                },
                "id": 7,
                "name": "Rotation Employee",
                "skillProficiencySet": Array [
                  Object {
                    "id": 6,
                    "name": "Not Required Skill",
                    "tenantId": 0,
                    "version": 0,
                  },
                ],
                "tenantId": 0,
                "version": 0,
              },
              "rotationViolationPenaltyList": Array [],
              "shiftEmployeeConflictList": Array [],
              "spot": Object {
                "id": 2,
                "name": "Spot",
                "requiredSkillSet": Array [
                  Object {
                    "id": 3,
                    "name": "Skill",
                    "tenantId": 0,
                    "version": 0,
                  },
                ],
                "tenantId": 0,
                "version": 0,
              },
              "startDateTime": 2018-07-01T09:00:00.000Z,
              "tenantId": 0,
              "unassignedShiftPenaltyList": Array [],
              "unavailableEmployeeViolationList": Array [],
              "undesiredTimeslotForEmployeePenaltyList": Array [],
              "version": 0,
            },
          ]
        }
        key="2"
        length={0}
        localizer={
          DateLocalizer {
            "format": [Function],
            "formats": Object {
              "agendaDateFormat": "ddd MMM DD",
              "agendaHeaderFormat": [Function],
              "agendaTimeFormat": "LT",
              "agendaTimeRangeFormat": [Function],
              "dateFormat": "DD",
              "dayFormat": "DD ddd",
              "dayHeaderFormat": "dddd MMM DD",
              "dayRangeHeaderFormat": [Function],
              "eventTimeRangeEndFormat": [Function],
              "eventTimeRangeFormat": [Function],
              "eventTimeRangeStartFormat": [Function],
              "monthHeaderFormat": "MMMM YYYY",
              "selectRangeFormat": [Function],
              "timeGutterFormat": "LT",
              "weekdayFormat": "ddd",
            },
            "propType": [Function],
            "startOfWeek": [Function],
          }
        }
        onNavigate={[Function]}
        onSelectSlot={[Function]}
        onView={[Function]}
        selectable={true}
        showMultiDayTimes={true}
        startAccessor={[Function]}
        timeslots={4}
        titleAccessor={[Function]}
        toolbar={false}
        view="week"
        views={
          Array [
            "week",
          ]
        }
      />
    </div>
  </div>
</Fragment>
`;

exports[`Shift Roster Page should render correctly when loaded 1`] = `
<Fragment>
  <Level
    className=""
    gutter="sm"
    style={
      Object {
        "backgroundColor": "var(--pf-global--BackgroundColor--100)",
        "height": "60px",
        "padding": "5px 5px 5px 5px",
      }
    }
  >
    <LevelItem
      style={
        Object {
          "display": "flex",
        }
      }
    >
      <WeekPicker
        aria-label="Select Week to View"
        onChange={[Function]}
        value={2018-07-01T00:00:00.000Z}
      />
      <TypeaheadSelectInput
        aria-label="Select Spot"
        defaultValue={
          Object {
            "id": 2,
            "name": "Spot",
            "requiredSkillSet": Array [
              Object {
                "id": 3,
                "name": "Skill",
                "tenantId": 0,
                "version": 0,
              },
            ],
            "tenantId": 0,
            "version": 0,
          }
        }
        emptyText="Select Spot"
        onChange={[Function]}
        optionToStringMap={[Function]}
        options={
          Array [
            Object {
              "id": 2,
              "name": "Spot",
              "requiredSkillSet": Array [
                Object {
                  "id": 3,
                  "name": "Skill",
                  "tenantId": 0,
                  "version": 0,
                },
              ],
              "tenantId": 0,
              "version": 0,
            },
          ]
        }
      />
    </LevelItem>
    <LevelItem
      style={
        Object {
          "display": "flex",
        }
      }
    >
      <Button
        aria-label="Publish"
        onClick={[MockFunction]}
        style={
          Object {
            "margin": "5px",
          }
        }
      >
        Publish
      </Button>
      <Button
        aria-label="Solve"
        onClick={[MockFunction]}
        style={
          Object {
            "margin": "5px",
          }
        }
      >
        Schedule
      </Button>
      <Button
        aria-label="Refresh"
        onClick={[Function]}
        style={
          Object {
            "margin": "5px",
          }
        }
      >
        Refresh
      </Button>
      <Button
        aria-label="Create Shift"
        onClick={[Function]}
        style={
          Object {
            "margin": "5px",
          }
        }
      >
        Create Shift
      </Button>
    </LevelItem>
  </Level>
  <div
    style={
      Object {
        "height": "calc(100% - 60px)",
      }
    }
  >
    <Connect(EditShiftModal)
      aria-label="Edit Shift"
      isOpen={false}
      onClose={[Function]}
      onDelete={[Function]}
      onSave={[Function]}
    />
    <Title
      size="md"
    >
      Spot
    </Title>
    <div
      style={
        Object {
          "height": "calc(100% - 20px)",
        }
      }
    >
      <ForwardRef
        allDayAccessor={[Function]}
        components={
          Object {
            "event": [Function],
            "eventWrapper": [Function],
          }
        }
        date={2018-07-01T00:00:00.000Z}
        dayPropGetter={[Function]}
        endAccessor={[Function]}
        eventPropGetter={[Function]}
        events={
          Array [
            Object {
              "contractMinutesViolationPenaltyList": Array [],
              "desiredTimeslotForEmployeeRewardList": Array [],
              "employee": Object {
                "contract": Object {
                  "id": 5,
                  "maximumMinutesPerDay": 10,
                  "maximumMinutesPerMonth": 500,
                  "maximumMinutesPerWeek": 70,
                  "maximumMinutesPerYear": 6000,
                  "name": "Basic Contract",
                  "tenantId": 0,
                  "version": 0,
                },
                "id": 4,
                "name": "Employee 1",
                "skillProficiencySet": Array [
                  Object {
                    "id": 6,
                    "name": "Not Required Skill",
                    "tenantId": 0,
                    "version": 0,
                  },
                ],
                "tenantId": 0,
                "version": 0,
              },
              "endDateTime": 2018-07-01T17:00:00.000Z,
              "id": 1,
              "indictmentScore": Object {
                "hardScore": 0,
                "mediumScore": 0,
                "softScore": 0,
              },
              "pinnedByUser": false,
              "requiredSkillViolationList": Array [],
              "rotationEmployee": Object {
                "contract": Object {
                  "id": 5,
                  "maximumMinutesPerDay": 10,
                  "maximumMinutesPerMonth": 500,
                  "maximumMinutesPerWeek": 70,
                  "maximumMinutesPerYear": 6000,
                  "name": "Basic Contract",
                  "tenantId": 0,
                  "version": 0,
                },
                "id": 7,
                "name": "Rotation Employee",
                "skillProficiencySet": Array [
                  Object {
                    "id": 6,
                    "name": "Not Required Skill",
                    "tenantId": 0,
                    "version": 0,
                  },
                ],
                "tenantId": 0,
                "version": 0,
              },
              "rotationViolationPenaltyList": Array [],
              "shiftEmployeeConflictList": Array [],
              "spot": Object {
                "id": 2,
                "name": "Spot",
                "requiredSkillSet": Array [
                  Object {
                    "id": 3,
                    "name": "Skill",
                    "tenantId": 0,
                    "version": 0,
                  },
                ],
                "tenantId": 0,
                "version": 0,
              },
              "startDateTime": 2018-07-01T09:00:00.000Z,
              "tenantId": 0,
              "unassignedShiftPenaltyList": Array [],
              "unavailableEmployeeViolationList": Array [],
              "undesiredTimeslotForEmployeePenaltyList": Array [],
              "version": 0,
            },
          ]
        }
        key="2"
        length={0}
        localizer={
          DateLocalizer {
            "format": [Function],
            "formats": Object {
              "agendaDateFormat": "ddd MMM DD",
              "agendaHeaderFormat": [Function],
              "agendaTimeFormat": "LT",
              "agendaTimeRangeFormat": [Function],
              "dateFormat": "DD",
              "dayFormat": "DD ddd",
              "dayHeaderFormat": "dddd MMM DD",
              "dayRangeHeaderFormat": [Function],
              "eventTimeRangeEndFormat": [Function],
              "eventTimeRangeFormat": [Function],
              "eventTimeRangeStartFormat": [Function],
              "monthHeaderFormat": "MMMM YYYY",
              "selectRangeFormat": [Function],
              "timeGutterFormat": "LT",
              "weekdayFormat": "ddd",
            },
            "propType": [Function],
            "startOfWeek": [Function],
          }
        }
        onNavigate={[Function]}
        onSelectSlot={[Function]}
        onView={[Function]}
        selectable={true}
        showMultiDayTimes={true}
        startAccessor={[Function]}
        timeslots={4}
        titleAccessor={[Function]}
        toolbar={false}
        view="week"
        views={
          Array [
            "week",
          ]
        }
      />
    </div>
  </div>
</Fragment>
`;

exports[`Shift Roster Page should render correctly when loading 1`] = `<div />`;

exports[`Shift Roster Page should render correctly when solving 1`] = `
<Fragment>
  <Level
    className=""
    gutter="sm"
    style={
      Object {
        "backgroundColor": "var(--pf-global--BackgroundColor--100)",
        "height": "60px",
        "padding": "5px 5px 5px 5px",
      }
    }
  >
    <LevelItem
      style={
        Object {
          "display": "flex",
        }
      }
    >
      <WeekPicker
        aria-label="Select Week to View"
        onChange={[Function]}
        value={2018-07-01T00:00:00.000Z}
      />
      <TypeaheadSelectInput
        aria-label="Select Spot"
        defaultValue={
          Object {
            "id": 2,
            "name": "Spot",
            "requiredSkillSet": Array [
              Object {
                "id": 3,
                "name": "Skill",
                "tenantId": 0,
                "version": 0,
              },
            ],
            "tenantId": 0,
            "version": 0,
          }
        }
        emptyText="Select Spot"
        onChange={[Function]}
        optionToStringMap={[Function]}
        options={
          Array [
            Object {
              "id": 2,
              "name": "Spot",
              "requiredSkillSet": Array [
                Object {
                  "id": 3,
                  "name": "Skill",
                  "tenantId": 0,
                  "version": 0,
                },
              ],
              "tenantId": 0,
              "version": 0,
            },
          ]
        }
      />
    </LevelItem>
    <LevelItem
      style={
        Object {
          "display": "flex",
        }
      }
    >
      <Button
        aria-label="Publish"
        onClick={[MockFunction]}
        style={
          Object {
            "margin": "5px",
          }
        }
      >
        Publish
      </Button>
      <Button
        aria-label="Terminate Early"
        onClick={[MockFunction]}
        style={
          Object {
            "margin": "5px",
          }
        }
      >
        Terminate Early
      </Button>
      <Button
        aria-label="Refresh"
        onClick={[Function]}
        style={
          Object {
            "margin": "5px",
          }
        }
      >
        Refresh
      </Button>
      <Button
        aria-label="Create Shift"
        onClick={[Function]}
        style={
          Object {
            "margin": "5px",
          }
        }
      >
        Create Shift
      </Button>
    </LevelItem>
  </Level>
  <div
    style={
      Object {
        "height": "calc(100% - 60px)",
      }
    }
  >
    <Connect(EditShiftModal)
      aria-label="Edit Shift"
      isOpen={false}
      onClose={[Function]}
      onDelete={[Function]}
      onSave={[Function]}
    />
    <Title
      size="md"
    >
      Spot
    </Title>
    <div
      style={
        Object {
          "height": "calc(100% - 20px)",
        }
      }
    >
      <ForwardRef
        allDayAccessor={[Function]}
        components={
          Object {
            "event": [Function],
            "eventWrapper": [Function],
          }
        }
        date={2018-07-01T00:00:00.000Z}
        dayPropGetter={[Function]}
        endAccessor={[Function]}
        eventPropGetter={[Function]}
        events={
          Array [
            Object {
              "contractMinutesViolationPenaltyList": Array [],
              "desiredTimeslotForEmployeeRewardList": Array [],
              "employee": Object {
                "contract": Object {
                  "id": 5,
                  "maximumMinutesPerDay": 10,
                  "maximumMinutesPerMonth": 500,
                  "maximumMinutesPerWeek": 70,
                  "maximumMinutesPerYear": 6000,
                  "name": "Basic Contract",
                  "tenantId": 0,
                  "version": 0,
                },
                "id": 4,
                "name": "Employee 1",
                "skillProficiencySet": Array [
                  Object {
                    "id": 6,
                    "name": "Not Required Skill",
                    "tenantId": 0,
                    "version": 0,
                  },
                ],
                "tenantId": 0,
                "version": 0,
              },
              "endDateTime": 2018-07-01T17:00:00.000Z,
              "id": 1,
              "indictmentScore": Object {
                "hardScore": 0,
                "mediumScore": 0,
                "softScore": 0,
              },
              "pinnedByUser": false,
              "requiredSkillViolationList": Array [],
              "rotationEmployee": Object {
                "contract": Object {
                  "id": 5,
                  "maximumMinutesPerDay": 10,
                  "maximumMinutesPerMonth": 500,
                  "maximumMinutesPerWeek": 70,
                  "maximumMinutesPerYear": 6000,
                  "name": "Basic Contract",
                  "tenantId": 0,
                  "version": 0,
                },
                "id": 7,
                "name": "Rotation Employee",
                "skillProficiencySet": Array [
                  Object {
                    "id": 6,
                    "name": "Not Required Skill",
                    "tenantId": 0,
                    "version": 0,
                  },
                ],
                "tenantId": 0,
                "version": 0,
              },
              "rotationViolationPenaltyList": Array [],
              "shiftEmployeeConflictList": Array [],
              "spot": Object {
                "id": 2,
                "name": "Spot",
                "requiredSkillSet": Array [
                  Object {
                    "id": 3,
                    "name": "Skill",
                    "tenantId": 0,
                    "version": 0,
                  },
                ],
                "tenantId": 0,
                "version": 0,
              },
              "startDateTime": 2018-07-01T09:00:00.000Z,
              "tenantId": 0,
              "unassignedShiftPenaltyList": Array [],
              "unavailableEmployeeViolationList": Array [],
              "undesiredTimeslotForEmployeePenaltyList": Array [],
              "version": 0,
            },
          ]
        }
        key="2"
        length={0}
        localizer={
          DateLocalizer {
            "format": [Function],
            "formats": Object {
              "agendaDateFormat": "ddd MMM DD",
              "agendaHeaderFormat": [Function],
              "agendaTimeFormat": "LT",
              "agendaTimeRangeFormat": [Function],
              "dateFormat": "DD",
              "dayFormat": "DD ddd",
              "dayHeaderFormat": "dddd MMM DD",
              "dayRangeHeaderFormat": [Function],
              "eventTimeRangeEndFormat": [Function],
              "eventTimeRangeFormat": [Function],
              "eventTimeRangeStartFormat": [Function],
              "monthHeaderFormat": "MMMM YYYY",
              "selectRangeFormat": [Function],
              "timeGutterFormat": "LT",
              "weekdayFormat": "ddd",
            },
            "propType": [Function],
            "startOfWeek": [Function],
          }
        }
        onNavigate={[Function]}
        onSelectSlot={[Function]}
        onView={[Function]}
        selectable={true}
        showMultiDayTimes={true}
        startAccessor={[Function]}
        timeslots={4}
        titleAccessor={[Function]}
        toolbar={false}
        view="week"
        views={
          Array [
            "week",
          ]
        }
      />
    </div>
  </div>
</Fragment>
`;
